// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalSidebar renders correctly with a "Previous" button 1`] = `
<div
  data-styleName="sidebar"
>
  <p
    data-styleName="gray-text close-button"
    onClick={[Function]}
  >
    CLOSE
  </p>
  <p
    data-styleName="header-theme"
  >
    header
  </p>
  <p
    data-styleName="text-theme"
  >
    body
  </p>
</div>
`;

exports[`ModalSidebar renders correctly without a theme 1`] = `
<div
  data-styleName="sidebar"
>
  <p
    data-styleName="gray-text close-button"
    onClick={[Function]}
  >
    CLOSE
  </p>
  <p
    data-styleName="sidebar-header"
  >
    header
  </p>
  <p
    data-styleName="gray-text sidebar-text"
  >
    body
  </p>
</div>
`;
